--- a/biopages/styles/styles.css
+++ b/biopages/styles/styles.css
@@ -7,19 +7,34 @@ html, body {
   font-family:Whitney;
 }
 
+#page{
+  margin:0px auto;
+  width:952px;
+}
+
 h1 {
   font-weight:200;
   font-size:30px;
+}
+
+p {
+  font-size:15px;
+  line-height:1.33em;
 }
 
 p.top-name {
   font-weight:200;
   font-size:40px;
   color:#21A1D3;
+  margin:14px 0 0 0;
+  line-height: 1.1em;
+  margin-bottom:10px;
 }
 
 p.stats {
-  margin-bottom:0px;
+  margin:0;
+  line-height:18px;
+  font-size:13px;
   }
 
 nav {
@@ -27,21 +42,16 @@ nav {
   position:fixed;
   top:0;
   background-color:rgba(0,0,0,0.125);
-  height:45px;
+  height:60px;
 }
 
-#page{
-  margin:0px auto;
-  width:972px;
-}
 
 #top-bio {
-  background-color:#aaa; 
   clear:both;
 }
 
-.hugo {
-  
+#hugo {
+ margin-bottom:45px; 
 }
 
 .column {
@@ -69,9 +79,11 @@ nav {
   min-height:10px;
   }
 
+/*** Big Grid*****************************/
+
 .big .c-thumb {
   float:left;
-  margin: 0 10px 12px 0;
+  margin: 0 8px 2px 0;
   width: 230px;
   position:relative;
   }
@@ -82,24 +94,64 @@ nav {
 }
 
 .big .label p {  
-  background-color:rgba(255,255,255,.8);
+  background-color:rgba(255,255,255,.6);
   padding:5px 8px;
   }
+
+.big .c-thumb img {
+  width:100%;
+  opacity:0.66;
+}
+
+.big .c-thumb:hover img, .big .selected.c-thumb img {
+  width:100%;
+  opacity:1;
+}
+
+
+/*** Small Grid*****************************/
+
+.small .c-thumb {
+  float:left;
+  margin: 0 10px 4px 0;
+  width: 180px;
+  position:relative;
+  }
+
+.small .label {}
+
+.small .label p {  
+  background-color:rgba(255,255,255,.6);
+  margin-top:2px;
+  text-transform:uppercase;
+  font-size:10px;
+  font-weight:600;
+  }
+
+.small .c-thumb {
+  opacity:0.5;
+}
 
 .c-thumb img {
   width:100%;
 }
 
-.c-thumb::last {
+.small .c-thumb:hover, .small .selected.c-thumb {
+  opacity:1;
+}
+
+#spacer {
+  height:90px;
+  width:100%;
   clear:both;
-  margin-bottom:200px;
 }
 
 footer {
+  clear:both;
+  margin-top:60px;
   height:90px;
   background-color:#333;
   width:100%;
-  display:none;
 }
 
 @font-face {
