--- a/biopages/styles/styles.css
+++ b/biopages/styles/styles.css
@@ -52,7 +52,8 @@ nav {
   position:fixed;
   top:0;
   background-color:rgba(0,0,0,0.125);
-  height:60px;
+  height:45px;
+  z-index:200;
 }
 
 
@@ -63,6 +64,7 @@ nav {
 #hugo {
  margin:0 0 45px 0;
  padding:0; 
+ position:relative;
 }
 
 .pager {
@@ -76,7 +78,7 @@ nav {
 
 .pager:hover {
   color:#000;
-    background-color:rgba(255,255,255,0.25);
+  background-color:rgba(255,255,255,0.25);
 }
 
 
