--- a/biopages/styles/styles.css
+++ b/biopages/styles/styles.css
@@ -176,17 +176,23 @@ nav {
   float:left;
   margin: 0 10px 4px 0;
   width: 180px;
+  height: 165px;
   position:relative;
   }
 
-.small .label {}
+.small .label {
+	width:100%;	
+	background-color:rgba(255,255,255,1);
+	height:35px;
+	position: absolute;
+	bottom:0px;
+	}
 
 .small .label p {  
-  background-color:rgba(255,255,255,.6);
-  margin-top:2px;
   text-transform:uppercase;
   font-size:10px;
   font-weight:600;
+  margin-top:8px
   }
 
 .small .c-thumb {
