--- a/biopages/styles/styles.css
+++ b/biopages/styles/styles.css
@@ -63,11 +63,12 @@ p.stats, .factoid p {
 }
 	
 #email { }
-#linkedin { }
+#linkedin { margin-top:-1px}
 #behance {
 	height:27px;
 	width:20px;
-	margin-top:-4px
+	margin-top:-5px;
+	margin-right: 14px;
 	}
 #dribbble { }
 #twitter {  }
